--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container d-flex justify-content-between">
           <a href="#" class="navbar-brand d-flex align-items-center">
-            <strong>Projets MMI</strong>
+            <strong>Projets MMI - Mathilde Vauquieres</strong>
           </a>
         </div>
       </div>
@@ -24,7 +24,7 @@
 
       <section class="jumbotron text-center m-0">
         <div class="container">
-          <h1>Prénom NOM</h1>
+          <h1>Mathilde Vauquieres</h1>
           <p class="lead text-muted">Liste de mes projets pédagogiques réalisés au <a href="http://mmimontbeliard.com/">département MMI Montbéliard</a>.</p>
         </div>
       </section>
