--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <h5>Projet final</h5>
                   <p class="btn-group">
                     <a href="#" class="btn btn-sm btn-outline-secondary">Repository Github</a>
-                    <a href="#" class="btn btn-sm btn-outline-secondary">Slides de présentation</a>
+                    <a href="#" class="btn btn-sm btn-outline-secondary">diaporama de présentation</a>
                     <a href="#" class="btn btn-sm btn-primary">Projet final</a>
                   </p>
                 </div>
@@ -66,7 +66,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col-md-6">
-                  <h3>Titre du projet</h3>
+                  <h3>Ziped</h3>
                   <p>Court descriptif (3-4 lignes max)</p>
                 </div>
                 <div class="col-md-6">
